<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_director">Director</string>
    <string name="movie_year">(2003)</string>
    <string name="movie_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="activity_movie_description">Description :</string>

    <string-array name="data_title">
        <item>The Shawshank Redemption</item>
        <item>The Godfather</item>
        <item>The Godfather\: Part II</item>
        <item>The Dark Knight</item>
        <item>12 Angry Men</item>
        <item>Schindler\'s List</item>
        <item>The Lord of the Rings\: The Return of the King</item>
        <item>Pulp Fiction</item>
        <item>The Good, the Bad and the Ugly</item>
        <item>Fight Club</item>
    </string-array>

    <string-array name="data_year">
        <item>1994</item>
        <item>1972</item>
        <item>1974</item>
        <item>2008</item>
        <item>1957</item>
        <item>1993</item>
        <item>2003</item>
        <item>1994</item>
        <item>1966</item>
        <item>1999</item>
    </string-array>

    <string-array name="data_director">
        <item>Frank Darabont</item>
        <item>Francis Ford Coppola</item>
        <item>Francis Ford Coppola</item>
        <item>Christopher Nolan</item>
        <item>Sidney Lumet</item>
        <item>Steven Spielberg</item>
        <item>Peter Jackson</item>
        <item>Quentin Tarantino</item>
        <item>Sergio Leone</item>
        <item>David Fincher </item>
    </string-array>

    <string-array name="data_rating">
        <item>9.3</item>
        <item>9.2</item>
        <item>9</item>
        <item>9</item>
        <item>8.9</item>
        <item>8.9</item>
        <item>8.9</item>
        <item>8.9</item>
        <item>8.8</item>
        <item>8.8</item>
    </string-array>

    <string-array name="data_description">
        <item>Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</item>
        <item>The aging patriarch of an organized crime dynasty transfers control of his clandestine empire to his reluctant son.</item>
        <item>The early life and career of Vito Corleone in 1920s New York City is portrayed, while his son, Michael, expands and tightens his grip on the family crime syndicate.</item>
        <item>When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept one of the greatest psychological and physical tests of his ability to fight injustice.</item>
        <item>A jury holdout attempts to prevent a miscarriage of justice by forcing his colleagues to reconsider the evidence.</item>
        <item>In German-occupied Poland during World War II, industrialist Oskar Schindler gradually becomes concerned for his Jewish workforce after witnessing their persecution by the Nazis.</item>
        <item>Gandalf and Aragorn lead the World of Men against Sauron\'s army to draw his gaze from Frodo and Sam as they approach Mount Doom with the One Ring.</item>
        <item>The lives of two mob hitmen, a boxer, a gangster and his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.</item>
        <item>A bounty hunting scam joins two men in an uneasy alliance against a third in a race to find a fortune in gold buried in a remote cemetery.</item>
        <item>An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/shawshank</item>
        <item>@drawable/godfather_1</item>
        <item>@drawable/godfather_2</item>
        <item>@drawable/dark_knight</item>
        <item>@drawable/twelve_angrymen</item>
        <item>@drawable/schindlers_list</item>
        <item>@drawable/lotr_rotk</item>
        <item>@drawable/pulp_fiction</item>
        <item>@drawable/the_gbu</item>
        <item>@drawable/fight_club</item>
    </array>
</resources>
